commit of adding ui integrating with backend + Seviceclass features + seen method